--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,15 @@ logs
 results
 
 npm-debug.log
+/build
+/node_modules
+.*.swp
+._*
+.DS_Store
+.git
+.hg
+.lock-wscript
+.svn
+.wafpickle-*
+CVS
+npm-debug.log
